--- a/css/sample.css
+++ b/css/sample.css
@@ -1,26 +1,30 @@
-body{
-    max-width:640px;
-    margin:0;
-    padding:0;
-    text-align:left;
-    font-size: 22px;
+body {
+    max-width: 640px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-size: 18px;
 }
-header{
-    background-color: #fff;
+
+header {
+    background: url("/localstorage/css/bg_pattern4_yoru.png");
     border-bottom: 1px solid #ccc;
     text-align: center;
-    height: 150px;
+    height: 90px;
+    color: #f7f7f7;
 }
 
-h1{
-    font-size: 32px;
+h1 {
+    font-size: 28px;
+    margin: 0;
+    padding: 0;
 }
 
-h2{
-    font-size: 24px;
+h2 {
+    font-size: 20px;
 }
 
-main{
+main {
 
     max-width: 560px;
     margin: auto;
@@ -29,112 +33,122 @@ main{
     padding: 0 50px;
 }
 
-footer{
+footer {
     background-color: #fff;
-    border-bottom:1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     text-align: center;
-}
-p{
-    font-size:100%;
-    text-align: center;
-    border-bottom:1px solid #fff;
-    height:100px;
 }
 
-.nomai{
+p {
+    font-size: 100%;
+    text-align: center;
+    border-bottom: 1px solid #fff;
+    height: 100px;
+}
+
+.nomai {
     padding: 0;
-    display:table;  /* 定義 */
+    display: table;
+    /* 定義 */
     table-layout: fixed;
-    width:100%;
+    width: 100%;
 }
 
 
 
-.tab{
-    list-style-type:none;
+.tab {
+    list-style-type: none;
     border: 1px solid #666;
     background-color: #FFF;
-    display:table-cell;  /* 定義 */
+    display: table-cell;
+    /* 定義 */
     cursor: pointer;
 }
 
 
-li:hover{
+li:hover {
     background: #0066CC;
-    color:#fff;
+    color: #fff;
 }
 
-input,textarea{
+input,
+textarea {
     margin: 3%;
     width: 180px;
-    font-size:80%;
+    font-size: 80%;
 }
 
-input{
+input {
     height: 30px;
 }
 
-textarea{
+textarea {
     height: 230px;
 }
 
 /*独自*/
 
-.content{
+.content {
     display: none;
 }
 
-.content.show{
+.content.show {
     display: inline;
 }
 
-.box{
-margin: 10px auto;  
- padding: 2px;
- width: 90%; 
- color: #666666; 
- background-color: #f7f7f7; 
- border: 2px solid #ccc; 
- border-radius: 8px; 
+.box {
+    margin: 10px auto;
+    padding: 2px;
+    width: 90%;
+    color: #666666;
+    background-color: #f7f7f7;
+    border: 2px solid #ccc;
+    border-radius: 8px;
 }
 
 
 
-.sex{
+.sex {
     width: 30px;
     border: 0px;
 }
 
-.tex{
+.tex {
     display: flex;
     align-items: center;
-    
-    
+
+
 }
 
-label{
+label {
     display: table-row;
 }
 
-dt{
+dt {
     text-align: left;
 }
 
-dd{
+dd {
     display: table-row;
 }
 
-.danjo{
+.danjo {
     margin: initial;
     width: initial;
-    font-size:initial;
+    font-size: initial;
+    position: relative;
+    top: 8px;
 }
 
-.sex_1{
+.otoko {
+    margin: 0 0 0 5px;
+}
+
+.sex_1 {
     text-align: left;
 }
 
-.profileinfo{
+.profileinfo {
     font-weight: bold;
     font-size: 16px;
 }
